<resources>
    <string name="app_name">Stockbit</string>
    <string name="watchlist">Watchlist</string>
    <string name="stream">Stream</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="portofolio">Portofolio</string>
    <string name="login">Login</string>
    <string name="masuk_dengan_google">Masuk dengan Google</string>
    <string name="masuk_dengan_facebook">Masuk dengan Facebook</string>
    <string name="atau">Atau</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="masuk_dengan_fingerprint">Masuk dengan Fingerprint</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_sekarang">Daftar sekarang</string>
    <string name="masuk">Masuk</string>
    <string name="add_symbol">Add Symbol</string>
    <string name="all_watchlist">All Watchlist</string>
    <string name="data_not_found">DATA NOT FOUND</string>
    <string name="something_wrong">Something went wrong</string>
</resources>