<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/login_top"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/masuk"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/_14ssp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/ic_chevron_back"
        android:layout_marginStart="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="@id/login_top"
        app:layout_constraintBottom_toBottomOf="@id/login_top"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:layout_width="@dimen/_16sdp"
        android:layout_height="@dimen/_16sdp"
        android:src="@drawable/ic_headset"
        android:layout_marginEnd="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="@id/login_top"
        app:layout_constraintBottom_toBottomOf="@id/login_top"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_google"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/masuk_dengan_google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        app:iconPadding="@dimen/_10sdp"
        app:icon="@drawable/ic_google_icon"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_top"
        app:strokeColor="@color/lightGrey" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_facebook"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/masuk_dengan_facebook"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        app:icon="@drawable/ic_facebook_icon"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_google"
        app:strokeColor="@color/lightGrey" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@color/lightGrey"
        app:layout_constraintBottom_toBottomOf="@id/login_or"
        app:layout_constraintEnd_toStartOf="@id/login_or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/login_or" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@color/lightGrey"
        app:layout_constraintBottom_toBottomOf="@id/login_or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/login_or"
        app:layout_constraintTop_toTopOf="@id/login_or" />

    <TextView
        android:id="@+id/login_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/atau"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_facebook" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_username_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/login_or">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/username_or_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingTop="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/lightGrey"
            android:textSize="@dimen/_12sdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_pass_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/grey"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/login_username_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:textColor="@color/black"
            android:textColorHint="@color/lightGrey"
            android:textSize="@dimen/_12sdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/login_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/lupa_password"
        android:textColor="@color/green"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_pass_container" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/login"
        android:textAllCaps="false"
        app:backgroundTint="@color/green"
        app:elevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_forgot"
        app:rippleColor="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_fingerprint"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/masuk_dengan_fingerprint"
        android:textAllCaps="false"
        android:textColor="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:rippleColor="@color/green"
        app:strokeColor="@color/green" />

    <TextView
        android:id="@+id/login_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/belum_punya_akun"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:layout_marginEnd="@dimen/_2sdp"
        app:layout_constraintEnd_toStartOf="@+id/login_register"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_fingerprint" />

    <TextView
        android:id="@+id/login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/daftar_sekarang"
        android:textColor="@color/green"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/login_question"
        app:layout_constraintTop_toBottomOf="@id/btn_fingerprint" />

</androidx.constraintlayout.widget.ConstraintLayout>